2011-06-15  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #27396: Follow-up to keep most of the old DIV/SPAN classes
	* [TASK] Update l10n API calls for TYPO3 4.6.0

2011-06-13  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add RELEASE_NOTES to upgrade from egovapi 1.2 to 1.3
	* [TASK][!!!] #27396 Add markup for microformat in office address

2011-06-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #27380: Do not include community parameter in generated URL

2011-06-11  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #27373: Remove duplicate services
	* [BUGFIX] #27374: Constant Editor crashes with NULL pointer exception

2011-06-10  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE][!!!] #27344: Add support for block ranges

2011-06-06  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #27263: Add "Select all/none" for blocks
	* [TASK] Throw error when inconsistency between organization and community files is detected
	* [BUGFIX] #27237: Constant Editor crashes when egovapi DAO is NULL

2011-05-31  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.2.0

2011-05-30  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Make the default form template w3-compliant

2011-05-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Update documentation with latest configuration options
	* [TASK][CONF] Add TS option to return organization coordinates

2011-05-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Dramatically improve AJAX response time
	* [FEATURE] Add support for latitude/longitude coordinates of organizations

2011-05-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Refactor cache class to allow it to be used by pi2 to speed up AJAX calls
	* [TASK] Set default WS language based on config.language
	* [TASK][DOC] Update PDF documentation and optmized it to reduce file size
	* [TASK][DOC] Add TypoScript configuration sample for generating legacy parametrized URL

2011-05-25  Xavier Perseguers  <xavier@causal.ch>
