@@ -138,8 +138,8 @@
 			<div class="tx_egovapi_block_contact_logo"><img src="{service.contact.logo}" alt="{service.contact.office}" /></div>
 			<div class="vcard"><!-- hCard-enabled: http://microformats.org/ -->
 				<div class="org fn">
-					<div class="tx_egovapi_block_contact_office organization-name">{service.contact.office}</div>
-					<div class="tx_egovapi_block_contact_department organization-unit">{service.contact.department}</div>
+					<div class="tx_egovapi_block_contact_office organization-name">{service.contact.department}</div>
+					<div class="tx_egovapi_block_contact_department organization-unit">{service.contact.office}</div>
 				</div>
 				<div class="adr">
 					<span class="type" style="display:none">Work</span>
