@@ -156,8 +156,8 @@ $<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/
 		<div class="tx_egovapi_block_contact_logo"><img src="###SERVICE_CONTACT_LOGO###" alt="###SERVICE_CONTACT_OFFICE###" /></div>
 		<div class="vcard"><!-- hCard-enabled: http://microformats.org/ -->
 			<div class="org fn">
-				<div class="tx_egovapi_block_contact_office organization-name">###SERVICE_CONTACT_OFFICE###</div>
-				<div class="tx_egovapi_block_contact_department organization-unit">###SERVICE_CONTACT_DEPARTMENT###</div>
+				<div class="tx_egovapi_block_contact_office organization-name">###SERVICE_CONTACT_DEPARTMENT###</div>
+				<div class="tx_egovapi_block_contact_department organization-unit">###SERVICE_CONTACT_OFFICE###</div>
 			</div>
 			<div class="adr">
 				<span class="type" style="display:none">Work</span>
